project/test/semantics/bad/input/Bad62_shouldThrowGenericArgumentListInvalidError.ty
singleton class Printer[A, B] {
    
    actions: {
        print: (x: A, y: B, z: A) -> Void = {
            System#printLine(x)
            System#printLine(y)
            System#printLine(z)
        }
    }
}

singleton class GenericTypes {
    
    actions: {
        main: () -> Void = {
            Printer[Int]#print(40, 3 > 2, 50) // GenericArgumentListInvalidError
        }
    }
}
